New planter box block

--- a/src/main/resources/assets/rys/lang/en_us.json
+++ b/src/main/resources/assets/rys/lang/en_us.json
@@ -15,6 +15,7 @@
 	"block.rys.dirt_bricks_wall": "Dirt Bricks Wall",
 	"block.rys.smooth_dirt_slab": "Smooth Dirt Slab",
 	"block.rys.smooth_dirt_stairs": "Smooth Dirt Stairs",
+	"block.rys.planter_box": "Planter Box",
 	
 	"item.rys.peat": "Peat",
 	"item.rys.orange": "Orange",
