Create es_es.json and updated en_us.json

--- a/src/main/resources/assets/rys/lang/es_es.json
+++ b/src/main/resources/assets/rys/lang/es_es.json
@@ -1,35 +1,34 @@
 {
-	"block.rys.tough_dirt": "Tough Dirt",
-	"block.rys.dirt_bricks": "Dirt Bricks",
-	"block.rys.smooth_dirt": "Smooth Dirt",
-	"block.rys.regolith": "Regolith",
-	"block.rys.clay_deposit": "Clay Deposit",
-	"block.rys.peat_deposit": "Peat Deposit",
-	"block.rys.iron_deposit": "Iron Deposit",
-	"block.rys.gold_deposit": "Gold Deposit",
-	"block.rys.peat_block": "Peat Block",
-	"block.rys.peat_bricks": "Peat Bricks",
-	"block.rys.tough_dirt_slab": "Tough Dirt Slab",
-	"block.rys.tough_dirt_stairs": "Tough Dirt Stairs",
-	"block.rys.tough_dirt_wall": "Tough Dirt Wall",
-	"block.rys.dirt_bricks_slab": "Dirt Bricks Slab",
-	"block.rys.dirt_bricks_stairs": "Dirt Bricks Stairs",
-	"block.rys.dirt_bricks_wall": "Dirt Bricks Wall",
-	"block.rys.smooth_dirt_slab": "Smooth Dirt Slab",
-	"block.rys.smooth_dirt_stairs": "Smooth Dirt Stairs",
-	"block.rys.planter_box": "Planter Box",
-	"block.rys.anthill": "Anthill",
-	"block.rys.apple_fruit_tree": "Apple Fruit Tree",
-	"block.rys.orange_fruit_tree": "Orange Fruit Tree",
-	"block.rys.apricot_fruit_tree": "Apricot Fruit Tree",
-	"block.rys.dayroot": "Dayroot",
+	"block.rys.tough_dirt": "Tierra dura",
+	"block.rys.dirt_bricks": "Ladrillos de tierra",
+	"block.rys.smooth_dirt": "Tierra lisa",
+	"block.rys.regolith": "Regolito",
+	"block.rys.clay_deposit": "Deposito de arcilla",
+	"block.rys.peat_deposit": "Deposito de turba",
+	"block.rys.iron_deposit": "Deposito de hierro",
+	"block.rys.gold_deposit": "Deposito de oro",
+	"block.rys.peat_block": "Bloque de turba",
+	"block.rys.tough_dirt_slab": "Losa de tierra dura",
+	"block.rys.tough_dirt_stairs": "Escaleras de tierra dura",
+	"block.rys.tough_dirt_wall": "Muro de tierra dura",
+	"block.rys.dirt_bricks_slab": "Losa de ladrillos de tierra",
+	"block.rys.dirt_bricks_stairs": "Escaleras de ladrillos de tierra",
+	"block.rys.dirt_bricks_wall": "Muro de ladrillos de tierra",
+	"block.rys.smooth_dirt_slab": "Losa de tierra lisa",
+	"block.rys.smooth_dirt_stairs": "Escaleras de tierra lisa",
+	"block.rys.planter_box": "Macetero",
+	"block.rys.anthill": "Hormiguero",
+	"block.rys.apple_fruit_tree": "Manzano",
+	"block.rys.orange_fruit_tree": "Naranjo",
+	"block.rys.apricot_fruit_tree": "Albaricoquero",
+	"block.rys.dayroot": "Raíz del día",
 	
-	"item.rys.peat": "Peat",
-	"item.rys.orange": "Orange",
-	"item.rys.apricot": "Apricot",
-	"item.rys.rotten_orange": "Rotten Orange",
-	"item.rys.rotten_apricot": "Rotten Apricot",
-	"item.rys.ant_spawn_egg": "Ant Spawn Egg",
+	"item.rys.peat": "Turba",
+	"item.rys.orange": "Naranja",
+	"item.rys.apricot": "Albaricoque",
+	"item.rys.rotten_orange": "Naranja podrida",
+	"item.rys.rotten_apricot": "Albaricoque podrido",
+	"item.rys.ant_spawn_egg": "Generar hormiga",
 	
 	"effect.rys.decrease_debuff": "Decrease Debuffs",
 	"effect.rys.increase_buff": "Increase Buffs",
