--- a/src/main/resources/assets/rys/lang/en_us.json
+++ b/src/main/resources/assets/rys/lang/en_us.json
@@ -1,5 +1,6 @@
 {
 	"block.rys.tough_dirt": "Tough Dirt",
+	"block.rys.mossy_tough_dirt": "Mossy Tough Dirt",
 	"block.rys.dirt_bricks": "Dirt Bricks",
 	"block.rys.smooth_dirt": "Smooth Dirt",
 	"block.rys.regolith": "Regolith",
@@ -11,6 +12,8 @@
 	"block.rys.peat_bricks": "Peat Bricks",
 	"block.rys.tough_dirt_slab": "Tough Dirt Slab",
 	"block.rys.tough_dirt_stairs": "Tough Dirt Stairs",
+	"block.rys.mossy_tough_dirt_slab": "Mossy Tough Dirt Slab",
+	"block.rys.mossy_tough_dirt_stairs": "Mossy Tough Dirt Stairs",
 	"block.rys.tough_dirt_wall": "Tough Dirt Wall",
 	"block.rys.dirt_bricks_slab": "Dirt Bricks Slab",
 	"block.rys.dirt_bricks_stairs": "Dirt Bricks Stairs",
