Updated ru_ru.json - Changed the name for tough dirt to nor corelate with coarse dirt - Fixed typo

--- a/src/main/resources/assets/rys/lang/ru_ru.json
+++ b/src/main/resources/assets/rys/lang/ru_ru.json
@@ -1,6 +1,6 @@
 {
-	"block.rys.tough_dirt": "Каменистая земля",
-	"block.rys.mossy_tough_dirt": "Замшелая каменистая земля",
+	"block.rys.tough_dirt": "Твердая земля",
+	"block.rys.mossy_tough_dirt": "Замшелая Твердая земля",
 	"block.rys.dirt_bricks": "Земляные кипричи",
 	"block.rys.smooth_dirt": "Гладкая земля",
 	"block.rys.regolith": "Реголит",
@@ -10,11 +10,11 @@
 	"block.rys.gold_deposit": "Залежь золота",
 	"block.rys.peat_block": "Торфяной блок",
 	"block.rys.peat_bricks": "Торфяной брикет",
-	"block.rys.tough_dirt_slab": "Плита из каменистой земли",
-	"block.rys.tough_dirt_stairs": "Ступеньки из каменистой земли",
-	"block.rys.mossy_tough_dirt_slab": "Плита из замшелой каменистой земли",
-	"block.rys.mossy_tough_dirt_stairs": "Ступеньки из замшелой каменистой земли",
-	"block.rys.tough_dirt_wall": "Ограда из каменистой земли",
+	"block.rys.tough_dirt_slab": "Плита из твердой земли",
+	"block.rys.tough_dirt_stairs": "Ступеньки из твердой земли",
+	"block.rys.mossy_tough_dirt_slab": "Плита из замшелой твердой земли",
+	"block.rys.mossy_tough_dirt_stairs": "Ступеньки из замшелой твердой земли",
+	"block.rys.tough_dirt_wall": "Ограда из твердой земли",
 	"block.rys.dirt_bricks_slab": "Плита из земляных кипричей",
 	"block.rys.dirt_bricks_stairs": "Ступеньки из земляных кипричей",
 	"block.rys.dirt_bricks_wall": "Ограда из земляных кипричей",
@@ -28,7 +28,7 @@
 	"block.rys.dayroot": "Корень света",
 	
 	"item.rys.peat": "Торф",
-	"item.rys.orange": "Апельсик",
+	"item.rys.orange": "Апельсин",
 	"item.rys.apricot": "Абрикос",
 	"item.rys.rotten_orange": "Гнилой апельсин",
 	"item.rys.rotten_apricot": "Гнилой абрикос",
