--- a/src/main/resources/assets/rys/lang/es_es.json
+++ b/src/main/resources/assets/rys/lang/es_es.json
@@ -18,10 +18,10 @@
 	"block.rys.smooth_dirt_stairs": "Escaleras de tierra lisa",
 	"block.rys.planter_box": "Macetero",
 	"block.rys.anthill": "Hormiguero",
-	"block.rys.apple_fruit_tree": "Manzano",
-	"block.rys.orange_fruit_tree": "Naranjo",
-	"block.rys.apricot_fruit_tree": "Albaricoquero",
-	"block.rys.dayroot": "Raíz del día",
+  "block.rys.apple_fruit_sapling": "Manzano",
+  "block.rys.orange_fruit_sapling": "Naranjo",
+  "block.rys.apricot_fruit_sapling": "Albaricoquero",
+	"block.rys.dayroot": "Raï¿½z del dï¿½a",
 	
 	"item.rys.peat": "Turba",
 	"item.rys.orange": "Naranja",
